gap fixed

--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,9 @@ div.top-img {
   width: 100%;
   
 }
+ div#gap.nav2{
+  margin-top: -4px;
+}
 #logo {
   position: absolute;
   top: 2%;
